	* Change: Allow installation in not empty database (as long as no conflicts with existing tables occurs)
	* Change: Simplified TodoyuForm::injectFieldset (by Captain_FLAM)
	* Change: Load the override config before init (CaptainFLAM)
	* Change: Always return the label (or the key) for a label (never empty)
	* Add: Added doubleEncode parameter for TodoyuString::htmlentities
	* Add: Translated log levels in core/locale/en_GB/global.xml
	* Add: Caching for class autoloader
	* Add: Custom callback on empty result for searchlist panel widget
	* Add: TodoyuMail::setCurrentUserAsSender() as a shortcut
	* Add: Confirm removal of sub record in db relation in form
	* Add: Allow to hook in into the form display event in javascript
	* Remove: Removed unused function TodoyuArray::convertToUTF8Array
	* Update: JsCalendar library updated. Added some extra utf-8 language packages (provided by Captain_FLAM)
	* Update: tinyMCE 3.4.4

	

core 2.1.1 - 2011-07-25
	* Feature: Added optional event identifier to error/success notifications- notifications of the same event are now closing preceding notes of the same event (if present)
	* Bugfix: Installer- Fixed icon display bug of installer steps with long labels
	* Bugfix: open duration picker wasn't hidden when closing parent dialog
	* Bugfix: Added more tags to the badHtmlTags list to make sure they are escaped and not rendered (ex: embed)
	* Bugfix: Parsing dates in british english format failed (was interpreted as american)
	* Bugfix: List of available locales contained default locale twice
	* Bugfix: Timerange date selector had to high z-index
	* Bugfix: Detect also links in this format: "mailto:name@domain.com"
	* Bugfix: Archive manager creates now valid zip archives on windows (valid extraction on linux)
	* Bugfix: Contextmenu sub menu works now correct on linux firefox 5
	* Bugfix: Validate empty dates as valid
	* Changed: Rename Todoyu.Notification.onValueChange to validateDateFormat