@@ -17,6 +17,7 @@ core 2.1.2 - ???
 	* Change: Simplified TodoyuForm::injectFieldset (by Captain_FLAM)
 	* Change: Load the override config before init (CaptainFLAM)
 	* Change: Always return the label (or the key) for a label (never empty)
+	* Change: Cleanup hook manager. Hooks are now case insensitive and stored internally (Todoyu::$CONFIG['HOOKS'] is deprecated now)
 	* Add: Added doubleEncode parameter for TodoyuString::htmlentities
 	* Add: Translated log levels in core/locale/en_GB/global.xml
 	* Add: Caching for class autoloader
@@ -24,6 +25,8 @@ core 2.1.2 - ???
 	* Add: TodoyuMail::setCurrentUserAsSender() as a shortcut
 	* Add: Confirm removal of sub record in db relation in form
 	* Add: Allow to hook in into the form display event in javascript
+	* Add: Hook core.login on successful login
+	* Add: Hooks core.record.add, core.record.update, core.record.delete
 	* Remove: Removed unused function TodoyuArray::convertToUTF8Array
 	* Update: JsCalendar library updated. Added some extra utf-8 language packages (provided by Captain_FLAM)
 	* Update: tinyMCE 3.4.4
